fix spacing issues in itemCards

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,6 +1,6 @@
 .card {
   width: 100%;
-  max-width: 325px;
+
   font-family: "Cabinet Grotesk";
   list-style: none;
   position: relative;
@@ -9,8 +9,9 @@
 .cardsList {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: 100%;
-  margin: 0;
+  gap: 20px;
+  max-width: 100%;
+  margin: 0 auto;
   padding: 0;
 }
 
