--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,4 +4,5 @@
 
 .cards {
   width: 100%;
+  margin: 0;
 }
